--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
       </div>
       <div class="hands">
         <div class="hand paper">
-          <img src="/assets/Paper.png" onclick="pickUserHand('paper')" />
+          <img src="./assets/Paper.png" onclick="pickUserHand('paper')" />
         </div>
         <div class="hand scissors">
-          <img src="/assets/Scissors.png" onclick="pickUserHand('scissors')" />
+          <img src="./assets/Scissors.png" onclick="pickUserHand('scissors')" />
         </div>
         <div class="hand rock">
-          <img src="/assets/Rock.png" onclick="pickUserHand('rock')" />
+          <img src="./assets/Rock.png" onclick="pickUserHand('rock')" />
         </div>
       </div>
       <div class="contest">
         <div class="userhand">
           <h1>You Picked</h1>
           <div class="handImageContainer">
-            <img id="userPickImage" src="/assets/Paper.png" alt="" srcset="" />
+            <img id="userPickImage" src="./assets/Paper.png" alt="" srcset="" />
           </div>
         </div>
         <div class="referee">
@@ -52,7 +52,7 @@
         <div class="computerHand">
              <h1>House Picked</h1>
           <div class="handImageContainer">
-            <img id ="computerPickImage"src="/assets/Paper.png" alt="" srcset="" />
+            <img id ="computerPickImage"src="./assets/Paper.png" alt="" srcset="" />
           </div>
         </div>
       </div>
